--- a/src/styles/myapp.css
+++ b/src/styles/myapp.css
@@ -33,3 +33,32 @@ html,
   padding: 0;
   width: 100%;
 }
+
+.table-title .btn-group {
+    float: right;
+}
+.table-title .btn {
+    color: #fff;
+    float: right;
+    font-size: 13px;
+    border: none;
+    min-width: 50px;
+    border-radius: 2px;
+    border: none;
+    outline: none !important;
+    margin-left: 10px;
+    vertical-align: middle;
+}
+
+.vertical_middle {
+    vertical-align: middle;
+}
+.table-title .btn i {
+    float: left;
+    font-size: 21px;
+    margin-right: 5px;
+}
+.table-title .btn span {
+    float: left;
+    margin-top: 2px;
+}
