First chart is working

--- a/src/styles/myapp.css
+++ b/src/styles/myapp.css
@@ -86,3 +86,11 @@ html,
     margin-top: 3px;
     margin-bottom: 3px;
 }
+
+.chart-summaries {
+    width: 27rem;
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
